--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --fw-normal: 400;
     --fz-main: 1.6rem;
 }
+
 *,
 *::before,
 *::after {
@@ -183,7 +184,15 @@ input, button {
 .bottom-left {
     max-width: 39rem;
     position: relative;
+    cursor: pointer;
     margin-bottom: 7rem;
+    padding: 2rem;
+    transition: all 300ms ease-in-out;
+}
+
+.bottom-left:hover {
+    box-shadow: .3rem .3rem 1.6rem 0 rgba(50, 50, 50, 0.68);
+    transform: scale(1.1);
 }
 
 .num {
@@ -205,7 +214,15 @@ input, button {
 .bottom-center {
     max-width: 39rem;
     position: relative;
+    cursor: pointer;
+    padding: 2rem;
     margin-bottom: 7rem;
+    transition: 300ms ease-in-out;
+}
+
+.bottom-center:hover {
+    box-shadow: .3rem .3rem 1.6rem 0 rgba(50, 50, 50, 0.68);  
+    transform: scale(1.1);
 }
 
 .center-title {
@@ -218,6 +235,14 @@ input, button {
 .bottom-right {
     max-width: 39rem;
     position: relative;
+    cursor: pointer;
+    padding: 2rem;
+    transition: 300ms ease-in-out;
+}
+
+.bottom-right:hover {
+    box-shadow: .3rem .3rem 1.6rem 0 rgba(50, 50, 50, 0.68); 
+    transform: scale(1.1); 
 }
 
 .right-title {
@@ -247,24 +272,26 @@ input, button {
     max-width: 25rem;
     margin-bottom: 3rem;
 }
+
 .about-btn {
     padding: 1rem 2rem;
     background: var(--color-accent);
-    border: .1rem solid var(--color-accent);
+    border: 1px solid var(--color-accent);
     border-radius: .4rem;
     color: var(--color-light);
     cursor: pointer;
-    transition: background-color 200ms ease-in-out;
+    transition: 200ms ease-in-out;
     margin-bottom: 3rem;
 }
 
 .about-btn:hover {
-    background-color: #097a5a;
+    transform: scale(1.1);
 }
 
 .about-right {
     max-width: 89rem;
     position: relative;
+    cursor: pointer;
 }
 
 /* product */
@@ -289,9 +316,15 @@ input, button {
     text-align: center;
     padding: 1rem 3rem 1.5rem;
     position: absolute;
+    cursor: pointer;
     bottom: -7rem;
     left: 0;
-    filter: drop-shadow(0px 3.62249px 18.1125px rgba(165, 165, 165, 0.25));
+    filter: drop-shadow(0 .3rem 1.8rem rgba(165, 165, 165, 0.25));
+    transition: 300ms ease-in-out;
+}
+
+.product-mini:hover {
+    transform: scale(1.1);
 }
 
 .cust {
@@ -371,10 +404,12 @@ input, button {
 .footer {
     background-color: #245852;
 }
+
 .footer-wrapper {
     padding: 5rem 2rem;
     color: var(--color-light);
 }
+
 .footer__title {
     font-family: var(--ff-main);
     margin-bottom: 4rem;
@@ -384,7 +419,9 @@ input, button {
     display: block;
     margin-bottom: 2rem;
     font-size: 2rem;
+    cursor: pointer;
 }
+
 
 @media only screen and (min-device-width : 480px) {
     body {
@@ -466,6 +503,7 @@ input, button {
 
     .menu__item {
         color: var(--color-dark);
+        transition: 300ms ease;
     }
     
     .menu__item:hover {
@@ -619,17 +657,17 @@ input, button {
     }
 
     .bottom-left {
-        max-width: 30rem;
+        max-width: 35rem;
         align-self: flex-start;
     }
 
     .bottom-center {
-        max-width: 30rem;
+        max-width: 35rem;
         align-self: flex-end;
     }
 
     .bottom-right {
-        max-width: 30rem;
+        max-width: 35rem;
         align-self: center;
     }
 
